[css-flexbox] Have to use forceChildLayout to force layout

The flexbox code was assuming that calling layoutIfNeeded()
will do a full layout if needsLayout() is true.

However, that is not the case. It is possible for needsLayout()
to return true because posChildNeedsLayout is true, in which
case calling layout() will not do the full layout that the
flexbox code expects. Instead, call forceChildLayout to
ensure that layout happens.

R=eae@chromium.org,dgrogan@chromium.org
CC=szager@chromium.org
BUG=633212,629491

Review-Url: https://codereview.chromium.org/2219433002
Cr-Commit-Position: refs/heads/master@{#410135}

Former-commit-id: e929360ccd93a1e98db3b19929a68d1ed4fa4d5d